# ClashTiny

./: .gitignore  README.md
frontend/: index.html
helper/: Cargo.toml
helper/scripts/: com.clash-tiny.helper.plist  install.sh  uninstall.sh
helper/src/: main.rs
scripts/: crop_icon_e.py  gen_tray_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: override.yaml
src-tauri/scripts/: subscription_dialog.js
src-tauri/src/: autostart.rs  config.rs  core_manager.rs  helper_manager.rs  main.rs  proxy_manager.rs  subscription.rs  uninstall.rs
