[package]
name = "clash-tiny"
version = "0.1.0"
edition = "2021"
description = "A minimal macOS menu bar proxy manager powered by Mihomo"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"], default-features = false }
open = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
